--- a/templates/index.html
+++ b/templates/index.html
@@ -3,51 +3,34 @@
 <head>
   <title>Flaskr</title>
   <link rel="stylesheet" type="text/css" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
 </head>
-<body>
+<body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+          <h4 class="masthead-brand">startups</h4>
+        </div>
+      </header>
 
-  <div class="container">
+      <main role="main" class="inner cover">
+        <h2 class="cover-heading">Cover is a one-page template for building simple and beautiful home pages.</h2>
+        <p class="lead"></p>
+        <p class="lead">
+            <a href="#" class="btn btn-lg btn-warning btn76">-1</a>
+            <a href="#" class="btn btn-lg btn-warning btn76">0</a>
+            <a href="#" class="btn btn-lg btn-warning btn76">+1</a>
+        </p>
+      </main>
 
-    <h1>Flaskr-TDD</h1>
-
-    {% if not session.logged_in %}
-      <a class="btn btn-success" role="button" href="{{ url_for('login') }}">log in</a>
-    {% else %}
-      <a class="btn btn-warning" role="button" href="{{ url_for('logout') }}">log out</a>
-    {% endif %}
-
-    <br><br>
-
-    {% for message in get_flashed_messages() %}
-      <div class="flash alert alert-success col-sm-4" role="success">{{ message }}</div>
-    {% endfor %}
-
-    {% if session.logged_in %}
-      <form action="{{ url_for('add_entry') }}" method="post" class="add-entry form-group">
-        <dl>
-          <dt>Title:</dt>
-          <dd><input type="text" size="30" name="title" class="form-control col-sm-4"></dd>
-          <dt>Text:</dt>
-          <dd><textarea name="text" rows="5" cols="40" class="form-control col-sm-4"></textarea></dd>
-          <br><br>
-          <dd><input type="submit" class="btn btn-primary" value="Share"></dd>
-        </dl>
-      </form>
-    {% endif %}
-
-    <br>
-
-    <ul class="entries">
-      {% for entry in entries %}
-        <li class="entry"><h2 id="{{ entry.post_id }}">{{ entry.title }}</h2>{{ entry.text|safe }}</li>
-      {% else %}
-        <li><em>No entries yet. Add some!</em></li>
-      {% endfor %}
-    </ul>
-
-  </div>
-
-  <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+      <footer class="mastfoot mt-auto">
+        <div class="inner">
+          <p>The website was developed by nokados <a href="mailto:nokados@yandex.ru">nokados@yandex.ru</a></p>
+        </div>
+      </footer>
+  </div>    
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
   <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="{{url_for('static', filename='main.js') }}"></script>
 
