--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,14 @@
 <html>
 <head>
   <title>Flaskr</title>
-  <link rel="stylesheet" type="text/css" href="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
+  <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/css/mdb.min.css" rel="stylesheet">
+    <!-- Mine -->
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
 </head>
 <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
@@ -17,9 +23,9 @@
         <h2 class="cover-heading">Cover is a one-page template for building simple and beautiful home pages.</h2>
         <p class="lead"></p>
         <p class="lead">
-            <a href="#" class="btn btn-lg btn-warning btn76">-1</a>
-            <a href="#" class="btn btn-lg btn-warning btn76">0</a>
-            <a href="#" class="btn btn-lg btn-warning btn76">+1</a>
+            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning btn76">-1</a>
+            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning btn76">0</a>
+            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning btn76">+1</a>
         </p>
       </main>
 
@@ -29,10 +35,15 @@
         </div>
       </footer>
   </div>    
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="{{url_for('static', filename='main.js') }}"></script>
+<!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.3/js/mdb.min.js"></script>
+<script type="text/javascript" src="{{url_for('static', filename='main.js') }}"></script>
 
 </body>
 </html>
