--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.5/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <!-- Mine -->
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css') }}">
 </head>
@@ -20,12 +21,12 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h2 class="cover-heading">Cover is a one-page template for building simple and beautiful home pages.</h2>
+        <h3 class="cover-heading">Cover is a one-page template for building simple and beautiful home pages.</h3>
         <p class="lead"></p>
         <p class="lead">
-            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning btn76">-1</a>
-            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning btn76">0</a>
-            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning btn76">+1</a>
+            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-down"></i></a>
+            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-forward"></i></a>
+            <a href="#" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-up"></i></a>
         </p>
       </main>
 
