--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h3 class="cover-heading">Cover is a one-page template for building simple and beautiful home pages.</h3>
+        <h3 class="cover-heading">{{ideas[0]}}</h3>
         <p class="lead"></p>
         <p class="lead">
             <a href="#" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-down"></i></a>
