Fixed buttons in the bottom. h1 instead h3 for idea

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,17 +21,17 @@
       </header>
 
       <main role="main" class="inner cover">
-        <h3 id="cover-heading" class="animated jackInTheBox">{{ideas[0]}}</h3>
+        <h1 id="cover-heading" class="animated jackInTheBox">{{ideas[0]}}</h1>
         <p class="lead"></p>
-        <p class="lead">
-            <a href="#" id="thumbs_down" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-down"></i></a>
-            <a href="#" id="skip" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-forward"></i></a>
-            <a href="#" id="thumbs_up" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-up"></i></a>
-        </p>
       </main>
 
       <footer class="mastfoot mt-auto">
         <div class="inner">
+        <p class="lead managebuttons">
+            <a href="#" id="thumbs_down" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-down"></i></a>
+            <a href="#" id="skip" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-forward"></i></a>
+            <a href="#" id="thumbs_up" style="display:inline-block" class="btn btn-lg btn-warning rounded btn76"><i class="fas fa-thumbs-up"></i></a>
+        </p>
           <p>The website was developed by nokados <a href="mailto:nokados@yandex.ru">nokados@yandex.ru</a></p>
         </div>
       </footer>
