--- a/static/style.css
+++ b/static/style.css
@@ -58,7 +58,7 @@ body {
 .cover {
   padding: 0 1.5rem;
 }
-.cover .btn-lg {
+.managebuttons .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: 900;
 }
