Loading animation if client spent all ideas

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,17 @@
 
       <main role="main" class="inner cover">
         <h1 id="cover-heading" class="animated jackInTheBox">{{ideas[0]}}</h1>
-        <p class="lead"></p>
+        <div id="loading">
+            <div class="spinner-grow text-warning" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-warning" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+            <div class="spinner-grow text-warning" role="status">
+              <span class="sr-only">Loading...</span>
+            </div>
+        </div>
       </main>
 
       <footer class="mastfoot mt-auto">
