--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,11 @@ body {
 .cover {
   padding: 0 1.5rem;
 }
+
+#loading {
+    display: none;
+}
+
 .managebuttons .btn-lg {
   padding: .75rem 1.25rem;
   font-weight: 900;
