--- a/static/style.css
+++ b/static/style.css
@@ -64,13 +64,13 @@ body {
 }
 
 .managebuttons .btn-lg {
-  padding: .75rem 1.25rem;
+  padding: .66rem 1rem;
   font-weight: 900;
 }
 
 .btn76 {
-    width: 4.5rem;
-    margin: 0 0.5rem;
+    width: 4rem;
+    margin: 0.1rem 0.2rem;
     color: #333;
     border-radius: 12px;
     -webkit-border-radius: 12px;
@@ -86,6 +86,8 @@ body {
     top: 4px;
     border-bottom-width: 4px;
 }
+
+
 /*
  * Footer
  */
